:bug: corrigida a cor da scrollbar para chrome e firefox

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 * {
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  scrollbar-color: var(--primary) rgba(17, 17, 17, 0.952);
 }
 
 :root {
   --primary: #dc1a28;
+  --focus-primary: #ff1828;
   --black: #000000;
   --blackLighter: #9E9E9E;
   --grayLight: #F5F5F5;
@@ -22,4 +24,24 @@ body {
 
 a {
   color: inherit;
-} 
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+  background-color: rgba(17, 17, 17, 0.952);
+}
+
+::-webkit-scrollbar-button {
+  display: disabled;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary);
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--focus-primary);
+  border-radius: 20px;
+}
